syntax = "proto3";
option java_multiple_files = true;
package com.ampnet.projectservice.proto;

message GetByUuids {
    repeated string uuids = 1;
}

message OrganizationResponse {
    string uuid = 1;
    string name = 2;
    string created_by_user = 3;
    uint64 created_at = 4;
    bool approved = 5;
}

message ProjectResponse {
    string uuid = 1;
    string name = 2;
    string created_by_user = 3;
    uint64 start_date = 4;
    uint64 end_date = 5;
    uint64 expected_funding = 6;
    string currency = 7;
    bool active = 8;
    string organization_uuid = 9;
    string image_url = 10;
    string description = 11;
}

message OrganizationsResponse {
    repeated OrganizationResponse organizations = 1;
}

message ProjectsResponse {
    repeated ProjectResponse projects = 1;
}

service ProjectService {
    rpc GetOrganizations(GetByUuids) returns (OrganizationsResponse);
    rpc GetProjects(GetByUuids) returns (ProjectsResponse);
}
